--- a/index.html
+++ b/index.html
@@ -4,86 +4,103 @@
   <meta charset="UTF-8">
   <title>Accept?</title>
 
+  <!-- Pixel font -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
       height: 100vh;
+      background: #f8c8dc;
+      font-family: 'Press Start 2P', cursive;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       overflow: hidden;
     }
 
-    h2 {
+    h1 {
+      color: #b3003b;
+      text-align: center;
       margin-bottom: 20px;
     }
 
-    #area {
-      position: relative;
+    img {
       width: 300px;
-      height: 150px;
+      image-rendering: pixelated;
+      transition: transform 0.5s ease;
     }
 
     button {
-      position: absolute;
-      padding: 10px 20px;
-      font-size: 16px;
+      margin: 10px;
+      padding: 12px 20px;
+      font-family: inherit;
+      background: #ff9fcf;
+      border: 4px solid #b3003b;
+      color: #b3003b;
       cursor: pointer;
     }
 
-    #yes {
-      left: 40px;
-      top: 50px;
-    }
-
-    #no {
-      right: 40px;
-      top: 50px;
-    }
-
-    #slipper {
+    .heart {
       position: absolute;
-      top: 50%;
-      left: -200px;
-      width: 120px;
-      display: none;
-      animation: throwSlipper 1s ease-out forwards;
+      color: red;
+      font-size: 16px;
+      animation: fall 3s linear forwards;
     }
 
-    @keyframes throwSlipper {
-      0% { transform: translateX(0) rotate(0deg); }
-      100% { transform: translateX(1200px) rotate(720deg); }
+    @keyframes fall {
+      from { transform: translateY(-10px); }
+      to { transform: translateY(110vh); }
+    }
+
+    .shake {
+      animation: shake 0.3s;
+    }
+
+    @keyframes shake {
+      0% { transform: translate(0, 0); }
+      25% { transform: translate(10px, 5px); }
+      50% { transform: translate(-10px, -5px); }
+      75% { transform: translate(5px, -10px); }
+      100% { transform: translate(0, 0); }
     }
   </style>
 </head>
 
 <body>
 
-  <h2>Do you accept?</h2>
+  <h1>Do you accept?</h1>
 
-  <div id="area">
-    <button id="yes">Yes</button>
-    <button id="no">No</button>
+  <img id="cat" src="cat_innocent.png" alt="cat">
+
+  <div>
+    <button onclick="yesClicked()">YES</button>
+    <button>NO</button>
   </div>
 
-  <img id="slipper" src="slipper.png" alt="slipper">
-
   <script>
-    const noBtn = document.getElementById("no");
-    const yesBtn = document.getElementById("yes");
-    const slipper = document.getElementById("slipper");
+    function yesClicked() {
+      const cat = document.getElementById("cat");
 
-    noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 220;
-      const y = Math.random() * 100;
-      noBtn.style.left = x + "px";
-      noBtn.style.top = y + "px";
-    });
+      // hearts rain
+      for (let i = 0; i < 30; i++) {
+        const heart = document.createElement("div");
+        heart.className = "heart";
+        heart.innerText = "❤";
+        heart.style.left = Math.random() * window.innerWidth + "px";
+        document.body.appendChild(heart);
 
-    yesBtn.addEventListener("click", () => {
-      slipper.style.display = "block";
-    });
+        setTimeout(() => heart.remove(), 3000);
+      }
+
+      // cat "throw"
+      cat.style.transform = "translateX(200px) rotate(20deg)";
+
+      // screen shake
+      document.body.classList.add("shake");
+      setTimeout(() => document.body.classList.remove("shake"), 300);
+    }
   </script>
 
 </body>
